# be/svc-auth/internal/grpc/handlers.go
@@ -7,17 +7,53 @@ import (
 	"github.com/ggrrrr/btmt-ui/be/common/app"
 	"github.com/ggrrrr/btmt-ui/be/common/logger"
 	"github.com/ggrrrr/btmt-ui/be/svc-auth/authpb"
+	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
 var _ authpb.AuthSvcServer = (*server)(nil)
 
-func (*server) CreateAuth(context.Context, *authpb.CreateAuthRequest) (*authpb.CreateAuthResponse, error) {
+func (*server) UserCreate(context.Context, *authpb.UserCreateRequest) (*authpb.UserCreateResponse, error) {
 
 	panic("unimplemented")
 }
 
-func (*server) UpdateAuth(context.Context, *authpb.UpdateAuthRequest) (*authpb.UpdateAuthResponse, error) {
+func (s *server) UserList(ctx context.Context, _ *authpb.UserListRequest) (*authpb.UserListResponse, error) {
+	logger.InfoCtx(ctx).Msg("UserList")
+	list, err := s.app.UserList(ctx)
+	if err != nil {
+		logger.ErrorCtx(ctx, err).Msg("UserList")
+		return nil, app.ToGrpcError(err)
+	}
+
+	out := authpb.UserListResponse{
+		Payload: []*authpb.UserListPayload{},
+	}
+
+	for _, a := range list.Payload() {
+		out.Payload = append(out.Payload, &authpb.UserListPayload{
+			Email:       a.Email,
+			Status:      string(a.Status),
+			SystemRoles: a.SystemRoles,
+			CreatedAt:   timestamppb.New(a.CreatedAt),
+		})
+	}
+
+	return &out, nil
+}
+
+func (*server) UserUpdate(context.Context, *authpb.UserUpdateRequest) (*authpb.UserUpdateResponse, error) {
 	panic("unimplemented")
+}
+
+func (s *server) UserChangePasswd(ctx context.Context, req *authpb.UserChangePasswdRequest) (*authpb.UserChangePasswdResponse, error) {
+	logger.InfoCtx(ctx).Msg("UserChangePasswd")
+	err := s.app.UserChangePasswd(ctx, req.Email, req.Password, req.NewPassword)
+	if err != nil {
+		logger.ErrorCtx(ctx, err).Msg("UserChangePasswd")
+		return nil, app.ToGrpcError(err)
+	}
+
+	return &authpb.UserChangePasswdResponse{}, nil
 }
 
 func (s *server) LoginPasswd(ctx context.Context, req *authpb.LoginPasswdRequest) (*authpb.LoginPasswdResponse, error) {
@@ -28,57 +64,22 @@ func (s *server) LoginPasswd(ctx context.Context, req *authpb.LoginPasswdRequest
 		return nil, app.ToGrpcError(err)
 	}
 	return &authpb.LoginPasswdResponse{
-		Payload: &authpb.LoginPasswdPayload{
+		Payload: &authpb.LoginTokenPayload{
 			Email: req.Email,
 			Token: string(res.Payload()),
 		},
 	}, nil
 }
 
-func (s *server) ChangePasswd(ctx context.Context, req *authpb.ChangePasswdRequest) (*authpb.ChangePasswdResponse, error) {
-	logger.InfoCtx(ctx).Msg("ChangePasswd")
-	err := s.app.ChangePasswd(ctx, req.Email, req.Password, req.NewPassword)
+func (s *server) TokenValidate(ctx context.Context, _ *authpb.TokenValidateRequest) (*authpb.TokenValidateResponse, error) {
+	logger.InfoCtx(ctx).Msg("TokenValidate")
+	err := s.app.TokenValidate(ctx)
 	if err != nil {
-		logger.ErrorCtx(ctx, err).Msg("ChangePasswd")
+		logger.ErrorCtx(ctx, err).Msg("TokenValidate")
 		return nil, app.ToGrpcError(err)
 	}
 
-	return &authpb.ChangePasswdResponse{}, nil
-}
-
-func (s *server) ValidateToken(ctx context.Context, _ *authpb.ValidateTokenRequest) (*authpb.ValidateTokenResponse, error) {
-	logger.InfoCtx(ctx).Msg("ValidateToken")
-	err := s.app.Validate(ctx)
-	if err != nil {
-		logger.ErrorCtx(ctx, err).Msg("ValidateToken")
-		return nil, app.ToGrpcError(err)
-	}
-
-	return &authpb.ValidateTokenResponse{}, nil
-}
-
-func (s *server) ListAuth(ctx context.Context, _ *authpb.ListAuthRequest) (*authpb.ListAuthResponse, error) {
-	logger.InfoCtx(ctx).Msg("ListAuth")
-	list, err := s.app.ListAuth(ctx)
-	if err != nil {
-		logger.ErrorCtx(ctx, err).Msg("ListAuth")
-		return nil, app.ToGrpcError(err)
-	}
-
-	out := authpb.ListAuthResponse{
-		Payload: []*authpb.ListAuthPayload{},
-	}
-
-	for _, a := range list.Payload() {
-		out.Payload = append(out.Payload, &authpb.ListAuthPayload{
-			Email:       a.Email,
-			Status:      string(a.Status),
-			SystemRoles: a.SystemRoles,
-			CreatedAt:   a.CreatedAt.GoString(),
-		})
-	}
-
-	return &out, nil
+	return &authpb.TokenValidateResponse{}, nil
 }
 
 func (s *server) LoginOauth2(ctx context.Context, _ *authpb.LoginOauth2Request) (*authpb.LoginOauth2Response, error) {
